@@ -3,6 +3,7 @@ CHANGELOG
 2.0.59
 UTIl:
 * type=html-merger | introduce argument exportcsv=filename.xslx
+* type=tsf | introduce TechSupportFile - to extract running-config.xml from TSF
 
 BUGFIX:
 * type=xml-issue | bugfix to store output file also if pan-os API mode is used
